finish post edit page

--- a/django_playground/myblog/blog/templates/index.html
+++ b/django_playground/myblog/blog/templates/index.html
@@ -221,7 +221,7 @@
     <footer class="blog-footer">
       <p>&copy; 2018 UIC HCC Computer Society</p>
       <p>
-        <a href="#">STAFF ONLY</a>
+        <a href="{% url 'edit_page' 0 %}">STAFF ONLY</a>
       </p>
     </footer>
 
