finish login aurhentication

--- a/django_playground/uicCourse/course/templates/course/course.html
+++ b/django_playground/uicCourse/course/templates/course/course.html
@@ -35,31 +35,7 @@
 
     <!-- Begin page content -->
     <main role="main" class="container">
-      <h1 class="mt-5">UIC Index</h1>
-      <small class="text-secondary">For a more transparent future</small>
-      <hr>
-<div class="row">
-
-    <div class="col-sm">
-        <h4>Sorry, this site is still under construction.<br>Login is required.</h4>
-        </div>
-    <div class="col-sm">
-<div class="col-6">
-      <form action="{% url 'login_receiver' %}" method="post">
-          {% csrf_token %}
-          <div class="form-group">
-            <label for="exampleInputEmail1">Username</label>
-            <input type="text" class="form-control" placeholder="ID" name="username">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" placeholder="Password" name="password">
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    </div>
-</div>
+        <h1>C0urse L1st</h1>
     </main>
 
     <footer class="footer">
