--- a/django_playground/uicCourse/course/static/course/css/login_page.css
+++ b/django_playground/uicCourse/course/static/course/css/login_page.css
@@ -7,6 +7,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", sans-serif;
 }
 .footer {
   position: absolute;
