--- a/django_playground/uicCourse/course/templates/course/detail_edit.html
+++ b/django_playground/uicCourse/course/templates/course/detail_edit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Login request | Course Index</title>
+    <title>{{ coursedata.course_name_en }} | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
@@ -36,28 +36,59 @@
 
     <!-- Begin page content -->
     <main role="main" class="container">
-        <h1><pre>C0urse L1st</pre></h1>
-
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Course Name</th>
-                    <th scope="col">Course Code</th>
-                    <th scope="col">Course Unit(s)</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for course in courses %}
-                    <tr>
-                        <th scope="row">{{ course.id }}</th>
-                        <td><a href="{% url 'course_detail' course.id %}">{{ course.course_name_en }}</a></td>
-                        <td>{{ course.course_code }}</td>
-                        <td>{{ course.course_units }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <br>
+    <div class="card">
+      <div class="card-header text-white bg-dark">Course Edit: {{ coursedata.course_code | upper }}</div>
+      <form>
+      <div class="card-body ">
+          <div class="form-group">
+        <input type="text" class="form-control" value="{{ coursedata.course_name_en }}">
+          </div>
+<div class="form-group">
+        <input type="text" class="form-control" value="{{ coursedata.course_name_cn }}">
+</div>
+          <div class="row">
+              <div class="col">
+              <div class="card border-primary">
+                <div class="card-body text-primary">
+                  <h5 class="card-title">Course Code</h5>
+                    <div class="form-group">
+        <input type="text" class="form-control" value="{{ coursedata.course_code | upper }}">
+</div>
+                </div>
+              </div>
+              </div>
+              <div class="col">
+              <div class="card border-success">
+                <div class="card-body text-success">
+                  <h5 class="card-title">Course Class</h5>
+                    <div class="form-group">
+        <input type="text" class="form-control" value="{{ coursedata.course_class | upper }}">
+</div>
+                </div>
+              </div>
+              </div>
+              <div class="col">
+              <div class="card border-danger">
+                <div class="card-body text-danger">
+                  <h5 class="card-title">Course Units</h5>
+                    <div class="form-group">
+        <input type="number" class="form-control" value="{{ coursedata.course_units }}">
+</div>
+                </div>
+              </div>
+              </div>
+          </div>
+          <hr>
+          <div class="form-group">
+        <textarea class="form-control" rows="5">{{ coursedata.course_descriptions }}</textarea>
+</div>
+    </div>
+          <div class="form-group text-center">
+          <input type="submit" class="btn btn-primary" value="Save Edit">
+          </div>
+  </form>
+        </div>
     </main>
 
     <footer class="footer">
