--- a/django_playground/uicCourse/course/templates/course/index.html
+++ b/django_playground/uicCourse/course/templates/course/index.html
@@ -10,6 +10,17 @@
 
     {% load static %}
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
+      <style>
+          body{
+              background-image: url("https://www.ecwuuuuu.com/wallpaper/");
+              background-size: cover;
+          }
+          .site-wrapper-inner {
+              position:fixed;
+              width: 100%;
+              height: 100%;
+            }
+      </style>
 </head>
   <body>
 
@@ -32,7 +43,7 @@
         </div>
       </nav>
     </header>
-
+<div class="site-wrapper-inner" style="background-color: rgba(0, 0, 0, 0.7);">
     <!-- Begin page content -->
     <main role="main" class="container">
         {% if errormessage != NULL %}
@@ -43,24 +54,27 @@
             </button>
             </div>
         {% endif %}
-      <h1 class="mt-5">UIC Index</h1>
+    <br>
+      <h1 class="mt-5 text-white">UIC Index</h1>
       <small class="text-secondary">For a more transparent future</small>
-      <hr>
+      <hr style="border-color: #FFFFFF;">
 <div class="row">
-
-    <div class="col-sm">
-        <h4>Sorry, this site is still under construction.<br>Login is required.</h4>
+    <div class="col-8">
+        <h4 class="text-white">Sorry, this site is still under construction.<br>Login is required.</h4>
+        <p class="text-white">This is a course database for Beijing Normal University - Hong Kong Baptist University United International College.</p>
+        <p class="text-white">This site is develop and maintain by <a href="uichcc.com">UIC HCC Computer Society</a>, If you want to get a test account, please feel free to contact us.</p>
+        <a href="mailto:hi@uichcc.com">Our Email: hi@uichcc.com</a>
         </div>
-    <div class="col-sm">
-<div class="col-6">
+    <div class="col-4">
+<div>
       <form action="{% url 'login_receiver' %}" method="post">
           {% csrf_token %}
           <div class="form-group">
-            <label for="exampleInputEmail1">Username</label>
+            <label class="text-white">Username</label>
             <input type="text" class="form-control" placeholder="ID" name="username">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <label class="text-white">Password</label>
             <input type="password" class="form-control" placeholder="Password" name="password">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
@@ -69,7 +83,7 @@
     </div>
 </div>
     </main>
-
+</div>
     <footer class="footer">
       <div class="container">
         <span class="text-muted">&copy; 2018 UIC HCC Computer Society</span>
