--- a/django_playground/uicCourse/course/templates/course/detail_edit.html
+++ b/django_playground/uicCourse/course/templates/course/detail_edit.html
@@ -39,7 +39,7 @@
         <br>
     <div class="card">
       <div class="card-header text-white bg-dark">Course Edit: {{ coursedata.course_code | upper }}</div>
-      <form>
+      <form action="{% url 'course_edit_submit' %}" method="post">
       <div class="card-body ">
           <div class="form-group">
         <input type="text" class="form-control" value="{{ coursedata.course_name_en }}" name="cne">
