--- a/django_playground/uicCourse/course/templates/course/detail_edit.html
+++ b/django_playground/uicCourse/course/templates/course/detail_edit.html
@@ -83,6 +83,7 @@
           <hr>
           <div class="form-group">
         <textarea class="form-control" rows="5" name="cd">{{ coursedata.course_descriptions }}</textarea>
+              <input type="hidden" name="cid" value="{{ coursedata.id }}">
 </div>
     </div>
           <div class="form-group text-center">
