--- a/django_playground/uicCourse/course/templates/course/course.html
+++ b/django_playground/uicCourse/course/templates/course/course.html
@@ -37,8 +37,8 @@
     <!-- Begin page content -->
     <main role="main" class="container">
         <h1><pre>C0urse L1st</pre></h1>
-
-        <table class="table table-hover">
+        <a href="{% url 'course_detail_edit' '0' %}" class="btn btn-primary">New Course</a>
+        <table class="table table-hover" style="margin-top: 1rem;">
             <thead>
                 <tr>
                     <th scope="col">#</th>
