--- a/django_playground/uicCourse/course/templates/course/detail.html
+++ b/django_playground/uicCourse/course/templates/course/detail.html
@@ -69,6 +69,7 @@
               </div>
           </div>
           <hr>
+          <label>Course Descriptions:</label>
           <p class="card-text">{{ coursedata.course_descriptions }}</p>
     </div>
     </div>
