--- a/django_playground/uicCourse/course/templates/course/detail_edit.html
+++ b/django_playground/uicCourse/course/templates/course/detail_edit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>{{ coursedata.course_name_en }} | Course Index</title>
+    <title>[EDITING] {{ coursedata.course_name_en }} | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
