--- a/django_playground/uicCourse/course/templates/course/index.html
+++ b/django_playground/uicCourse/course/templates/course/index.html
@@ -77,7 +77,7 @@
             <label class="text-white">Password</label>
             <input type="password" class="form-control" placeholder="Password" name="password">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Login</button> 
         </form>
     </div>
     </div>
