--- a/django_playground/uicCourse/course/templates/course/newic.html
+++ b/django_playground/uicCourse/course/templates/course/newic.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Login request | Course Index</title>
+    <title>Admin tools: Invitation code | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
@@ -55,29 +55,50 @@
             </div>
         {% endif %}
     <br>
-      <h1 class="mt-5 text-white">UIC Index</h1>
+      <h1 class="mt-5 text-white">Invitation Code · UIC Index</h1>
       <small class="text-secondary">For a more transparent future</small>
       <hr style="border-color: #FFFFFF;">
 <div class="row">
     <div class="col-8">
-        <h4 class="text-white">Sorry, this site is still under construction.<br>Login is required.</h4>
-        <p class="text-white">This is a course database for Beijing Normal University - Hong Kong Baptist University United International College.</p>
-        <p class="text-white">This site is develop and maintain by <a href="https://uichcc.com">UIC HCC Computer Society</a>, If you want to get a test account, please feel free to contact us.</p>
-        <a href="mailto:hi@uichcc.com">Our Email: hi@uichcc.com</a>
+        <h4 class="text-white">Each invitation code can only be used once</h4>
+        <table class="table table-hover table-dark" style="margin-top: 1rem;">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Code</th>
+                    <th scope="col">Usability</th>
+                    <th scope="col">Operation</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for code in codes %}
+                    <tr>
+                        <th scope="row">{{ code.id }}</th>
+                        <td>{{ code.invitation_code }}</td>
+                        <td>
+                            {% if code.usability %}
+                                Valid
+                            {% else %}
+                                Invalid
+                            {% endif %}
+                        </td>
+                        <td><a href="{% url 'invitation_code_invalid' code.id %}" class="btn-danger btn-sm">Delete</a></td>
+                    {% endfor %}
+                    </tr>
+
+
+            </tbody>
+        </table>
         </div>
     <div class="col-4">
 <div>
-      <form action="{% url 'login_receiver' %}" method="post">
+      <form action="{% url 'invitation_code' %}" method="post">
           {% csrf_token %}
           <div class="form-group">
-            <label class="text-white">Username</label>
-            <input type="text" class="form-control" placeholder="ID" name="username">
+            <label class="text-white">Generate New Code(s)</label>
+            <input type="text" class="form-control" placeholder="How Many?" name="amount">
           </div>
-          <div class="form-group">
-            <label class="text-white">Password</label>
-            <input type="password" class="form-control" placeholder="Password" name="password">
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button> <a href="{% url 'signup_invite' %}" class="btn btn-success">Sign up</a>
+          <button type="submit" class="btn btn-primary">Generate</button>
         </form>
     </div>
     </div>
