--- a/django_playground/uicCourse/course/templates/course/signup.html
+++ b/django_playground/uicCourse/course/templates/course/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Login request | Course Index</title>
+    <title>Sign up | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
@@ -55,20 +55,21 @@
             </div>
         {% endif %}
     <br>
-      <h1 class="mt-5 text-white">UIC Index</h1>
+      <h1 class="mt-5 text-white">Sign up · UIC Index</h1>
       <small class="text-secondary">For a more transparent future</small>
       <hr style="border-color: #FFFFFF;">
 <div class="row">
     <div class="col-8">
-        <h4 class="text-white">Sorry, this site is still under construction.<br>Login is required.</h4>
-        <p class="text-white">This is a course database for Beijing Normal University - Hong Kong Baptist University United International College.</p>
-        <p class="text-white">This site is develop and maintain by <a href="https://uichcc.com">UIC HCC Computer Society</a>, If you want to get a test account, please feel free to contact us.</p>
-        <a href="mailto:hi@uichcc.com">Our Email: hi@uichcc.com</a>
+        <h4 class="text-white">You need an invitation code to register.</h4>
         </div>
     <div class="col-4">
 <div>
-      <form action="{% url 'login_receiver' %}" method="post">
+      <form action="{% url 'signup_receiver' %}" method="post">
           {% csrf_token %}
+          <div class="form-group">
+            <label class="text-white">Email</label>
+            <input type="email" class="form-control" placeholder="Email" name="email">
+          </div>
           <div class="form-group">
             <label class="text-white">Username</label>
             <input type="text" class="form-control" placeholder="ID" name="username">
@@ -77,7 +78,11 @@
             <label class="text-white">Password</label>
             <input type="password" class="form-control" placeholder="Password" name="password">
           </div>
-          <button type="submit" class="btn btn-primary">Login</button> <a href="{% url 'signup_invite' %}" class="btn btn-success">Sign up</a>
+          <div class="form-group">
+            <label class="text-white">Invitation code</label>
+            <input type="text" class="form-control" placeholder="Invitation code" name="invitationcode">
+          </div>
+          <button type="submit" class="btn btn-primary">Sign up</button>
         </form>
     </div>
     </div>
