delete that invitation code after use

--- a/django_playground/uicCourse/course/templates/course/newic.html
+++ b/django_playground/uicCourse/course/templates/course/newic.html
@@ -41,6 +41,7 @@
             </li>
           </ul>
         </div>
+          <a href="{% url 'logout_receiver' %}" class="form-inline nav-link mt-2 mt-md-0">{{ userdata.username }}</a>
       </nav>
     </header>
 <div class="site-wrapper-inner" style="background-color: rgba(0, 0, 0, 0.7);">
