--- a/django_playground/uicCourse/course/templates/course/course.html
+++ b/django_playground/uicCourse/course/templates/course/course.html
@@ -33,7 +33,11 @@
                 <li class="nav-item dropdown show">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+                    <h6 class="dropdown-header">Admin function</h6>
                     <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                    <div class="dropdown-divider"></div>
+                    <h6 class="dropdown-header">Account Relative</h6>
+                    <a class="dropdown-item" href="#">Account Information</a>
                     <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
                 </div>
                 </li>
