--- a/django_playground/uicCourse/course/templates/account/info.html
+++ b/django_playground/uicCourse/course/templates/account/info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>List | Course Index</title>
+    <title>Account Detail | Course Index</title>
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% load static %}
@@ -29,47 +29,54 @@
               <a class="nav-link" href="{% url 'course_list' %}">Course <span class="sr-only">(current)</span></a>
             </li>
           </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown show">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                    <h6 class="dropdown-header">Admin function</h6>
-                    <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
-                    <div class="dropdown-divider"></div>
-                    <h6 class="dropdown-header">Account Relative</h6>
-                    <a class="dropdown-item" href="{% url 'account_info_view' %}">Account Information</a>
-                    <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
-                </div>
-                </li>
-            </ul>
         </div>
+        <a href="{% url 'logout_receiver' %}" class="form-inline nav-link mt-2 mt-md-0">{{ userdata.username }}</a>
       </nav>
     </header>
 
     <!-- Begin page content -->
     <main role="main" class="container">
-        <h1><pre>C0urse L1st</pre></h1>
-        <a href="{% url 'course_detail_edit' '0' %}" class="btn btn-primary">New Course</a>
-        <table class="table table-hover" style="margin-top: 1rem;">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Course Name</th>
-                    <th scope="col">Course Code</th>
-                    <th scope="col">Course Unit(s)</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for course in courses %}
-                    <tr>
-                        <th scope="row">{{ course.id }}</th>
-                        <td><a href="{% url 'course_detail' course.id %}">{{ course.course_name_en }}</a></td>
-                        <td>{{ course.course_code }}</td>
-                        <td>{{ course.course_units }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <br>
+    <div class="card">
+      <div class="card-header text-white bg-dark">User ID: {{ userdata.id }}</div>
+      <div class="card-body">
+          <label>Name:</label>
+        <h1 class="card-title">{{ userdata.first_name }} <b>{{ userdata.last_name | upper }}</b></h1>
+          <label>Username:</label>
+        <h2 class="card-title">{{ userdata.username }}</h2>
+          <div class="row">
+              <div class="col">
+              <div class="card border-danger">
+                <div class="card-body text-danger">
+                  <h5 class="card-title">Email Account</h5>
+                  <p class="card-text">{{ userdata.email }}</p>
+                </div>
+              </div>
+              </div>
+              <div class="col">
+              <div class="card border-primary">
+                <div class="card-body text-primary">
+                  <h5 class="card-title">Last Login Time:</h5>
+                  <p class="card-text">{{ userdata.last_login }}</p>
+                </div>
+              </div>
+              </div>
+              <div class="col">
+              <div class="card border-success">
+                <div class="card-body text-success">
+                  <h5 class="card-title">Date Join:</h5>
+                  <p class="card-text">{{ userdata.date_joined }}</p>
+                </div>
+              </div>
+              </div>
+          </div>
+          <hr>
+          <label>Functions:</label>
+          <p>
+            <button class="btn btn-warning" disabled>Change Password (Coming soon)</button>
+          </p>
+    </div>
+    </div>
     </main>
 
     <footer class="footer">
