--- a/django_playground/uicCourse/course/templates/course/detail_edit.html
+++ b/django_playground/uicCourse/course/templates/course/detail_edit.html
@@ -29,8 +29,20 @@
               <a class="nav-link" href="{% url 'course_list' %}">Course <span class="sr-only">(current)</span></a>
             </li>
           </ul>
+           <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown show">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
+                    <h6 class="dropdown-header">Admin function</h6>
+                    <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
+                    <div class="dropdown-divider"></div>
+                    <h6 class="dropdown-header">Account Relative</h6>
+                    <a class="dropdown-item" href="{% url 'account_info_view' %}">Account Information</a>
+                    <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
+                </div>
+                </li>
+            </ul>
         </div>
-        <a href="{% url 'logout_receiver' %}" class="form-inline nav-link mt-2 mt-md-0">{{ userdata.username }}</a>
       </nav>
     </header>
 
