finish user info edit, fixed #1

--- a/django_playground/uicCourse/course/templates/account/password.html
+++ b/django_playground/uicCourse/course/templates/account/password.html
@@ -12,7 +12,6 @@
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
 </head>
   <body>
-
     <header>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -52,62 +51,20 @@
     <main role="main" class="container">
         <br>
     <div class="card">
-      <div class="card-header text-white bg-dark">User ID: {{ userdata.id }} </div>
+      <div class="card-header text-white bg-dark">Change Password for <code>{{ userdata.username }} (UID:{{ userdata.id }})</code></div>
       <div class="card-body">
-          <label>Name:</label>
-        <h1 class="card-title">{{ userdata.first_name }} <b>{{ userdata.last_name | upper }}</b></h1>
-          <label>Username:</label>
-        <h2 class="card-title">{{ userdata.username }}</h2>
-          <div class="row">
-              <div class="col">
-              <div class="card border-danger">
-                <div class="card-body text-danger">
-                  <h5 class="card-title">Email Account</h5>
-                  <p class="card-text">{{ userdata.email }}</p>
-                </div>
+          <form action="{% url 'account_info_submit' %}" method="post">
+            {% csrf_token %}
+              <div>
+                    <input type="password" id="inputPassword1" class="form-control" placeholder="Password" required="required">
+                    <br>
+                    <input type="password" id="inputPassword2" class="form-control" placeholder="Enter Password Again" required="required">
               </div>
-              </div>
-              <div class="col">
-              <div class="card border-primary">
-                <div class="card-body text-primary">
-                  <h5 class="card-title">Last Login Time:</h5>
-                  <p class="card-text">{{ userdata.last_login }}</p>
-                </div>
-              </div>
-              </div>
-              <div class="col">
-              <div class="card border-success">
-                <div class="card-body text-success">
-                  <h5 class="card-title">Date Join:</h5>
-                  <p class="card-text">{{ userdata.date_joined }}</p>
-                </div>
-              </div>
-              </div>
-          </div>
-          <hr>
-          <label>Account Status</label>
-          <p>
-              {% if userdata.is_active %}
-                        <span class="btn btn-success">ACTIVE</span>
-              {% else %}
-                        <span class="btn btn-warning">Unable to login</span>
-              {% endif %}
-              {% if userdata.is_staff %}
-              <span class="btn btn-primary">STAFF</span>
-              {% else %}
-              {% endif %}
-          {% if userdata.is_superuser %}
-              <span class="btn btn-warning">SUPERUSER</span>
-              {% else %}
-              {% endif %}
-          </p>
-          <hr>
-          <label>Functions:</label>
-          <p>
-            <a href="{% url 'account_info_edit' %}" class="btn btn-success">Change Profile</a> <a href="{% url 'account_password_edit' %}" class="btn btn-warning">Change Password</a>
-          </p>
-    </div>
-    </div>
+              <hr>
+              <input class="btn btn-primary btn-lg btn-block" type="submit" value="Save Change">
+          </form>
+      </div>
+      </div>
     </main>
 
     <footer class="footer">
