finish password change view

--- a/django_playground/uicCourse/course/templates/account/password.html
+++ b/django_playground/uicCourse/course/templates/account/password.html
@@ -53,15 +53,19 @@
     <div class="card">
       <div class="card-header text-white bg-dark">Change Password for <code>{{ userdata.username }} (UID:{{ userdata.id }})</code></div>
       <div class="card-body">
-          <form action="{% url 'account_info_submit' %}" method="post">
+          <form action="{% url 'account_password_submit' %}" method="post" id="passwordForm" name="passwordForm">
             {% csrf_token %}
               <div>
-                    <input type="password" id="inputPassword1" class="form-control" placeholder="Password" required="required">
+                  <p><b>Your new password should longer than 8 characters</b></p>
+                    <input type="password" name="opw" class="form-control" placeholder="Old Password" required="required">
                     <br>
-                    <input type="password" id="inputPassword2" class="form-control" placeholder="Enter Password Again" required="required">
+                    <input type="password" name="pw" id="inputPassword1" class="form-control" placeholder="New Password" required="required">
+                    <br>
+                    <input type="password" id="inputPassword2" class="form-control" placeholder="Enter The Password Again" required="required">
               </div>
               <hr>
-              <input class="btn btn-primary btn-lg btn-block" type="submit" value="Save Change">
+              <p>After setting new password, you will logout by the system, and then you can try to login with your new password.</p>
+              <a href="javascript:passwordCheck();" class="btn btn-primary btn-lg btn-block">Save Change</a>
           </form>
       </div>
       </div>
@@ -80,5 +84,20 @@
     {% load static %}
     <script src="{% static "js/popper.min.js" %}"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script>
+        function passwordCheck() {
+            pw = document.getElementById('inputPassword1').value;
+            check = document.getElementById('inputPassword2').value;
+            if (pw !== check){
+                alert('Password Not Match!');
+            }else if (pw == ''){
+                alert('Password can\'t be empty!');
+            }else if (pw.length < 8){
+                alert('Password is too short!');
+            }else{
+                document.forms["passwordForm"].submit();
+            }
+        }
+    </script>
   </body>
 </html>
