delete old message module

--- a/django_playground/uicCourse/course/templates/course/signup.html
+++ b/django_playground/uicCourse/course/templates/course/signup.html
@@ -60,6 +60,28 @@
       <hr style="border-color: #FFFFFF;">
 <div class="row">
     <div class="col-8">
+        {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {% else %}
+                {% if message.tags == 'warning' %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {% else %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {% else %}
+                        <div class="alert alert-info alert-dismissible fade show" role="alert">
+                    {% endif %}
+                {% endif %}
+            {% endif %}
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    {% endif %}
         <h4 class="text-white">You need an invitation code to register.</h4>
         </div>
     <div class="col-4">
