--- a/django_playground/uicCourse/course/templates/course/newic.html
+++ b/django_playground/uicCourse/course/templates/course/newic.html
@@ -75,6 +75,28 @@
       <hr style="border-color: #FFFFFF;">
 <div class="row">
     <div class="col-8">
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {% else %}
+                {% if message.tags == 'warning' %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {% else %}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    {% else %}
+                        <div class="alert alert-info alert-dismissible fade show" role="alert">
+                    {% endif %}
+                {% endif %}
+            {% endif %}
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    {% endif %}
         <h4 class="text-white">Each invitation code can only be used once</h4>
         <table class="table table-hover table-dark" style="margin-top: 1rem;">
             <thead>
