--- a/django_playground/uicCourse/course/templates/course/index.html
+++ b/django_playground/uicCourse/course/templates/course/index.html
@@ -12,7 +12,7 @@
     <link href="{% static "course/css/login_page.css" %}" rel="stylesheet">
       <style>
           body{
-              background-image: url("https://www.ecwuuuuu.com/wallpaper/");
+              background-image: url("https://source.unsplash.com/random");
               background-size: cover;
           }
           .site-wrapper-inner {
