--- a/django_playground/uicCourse/course/templates/course/index.html
+++ b/django_playground/uicCourse/course/templates/course/index.html
@@ -101,6 +101,7 @@
     <footer class="footer">
       <div class="container">
         <span class="text-muted">&copy; 2018 UIC HCC Computer Society</span>
+        <span class="text-muted text-right"> | Daily image from: <a href="https://unsplash.com/">Unsplash</a></span>
       </div>
     </footer>
 
